--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-node_modules
+node_modules/
 build
 .DS_Store
 request_logs.txt
@@ -7,4 +7,5 @@ storage
 .esbuild
 drafts.txt
 drafts.ts
+.serverless/
 
