feat: add new info to env.yml
add constants with info about table

MODULE3-PART2

:

--- a/env.yml
+++ b/env.yml
@@ -3,6 +3,8 @@ common:
   REGION: us-east-1
   PROFILE: default
   CLIENT: FLO
+  TABLE_NAME: Alice-Users-dev
+  PROFILE_TAG: PROFILE
 
 local:
   <<: *common
