refactor: change front
change front structure

MODULE3-PART2

--- a/backend/env.yml
+++ b/backend/env.yml
@@ -4,6 +4,7 @@ common:
   PROFILE: default
   CLIENT: FLO
   TABLE_NAME: Alice-Users-dev
+  INDEX_NAME: ImagesIndex
   PROFILE_TAG: PROFILE
   IMAGE_TAG: IMAGE
 
